force-app/main/default/objects/BuyerRequestQuoteInputRepresentation__c/BuyerRequestQuoteInputRepresentation__c.object-meta.xml
<CustomObject>
    <label>Buyer Request Quote Input Representation</label>
    <nameField>
        <displayFormat>BRQIR-{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Buyer Request Quote Input Representation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>