force-app/main/default/objects/BuyerRequestQuoteInputRepresentation__c/fields/Cart__c.field-meta.xml
<CustomField>
    <fullName>Cart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cart</label>
    <referenceTo>WebCart</referenceTo>
    <relationshipLabel>Buyer Request Quote Input Representation</relationshipLabel>
    <relationshipName>Buyer_Request_Quote_Input_Representation</relationshipName>
    <type>Lookup</type>
</CustomField>